[project]
name = "mtcli-book"
version = "0.1.1"
description = "Plugin mtcli do book de ofertas"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.11,<3.14.0"
dependencies = [
    "mtcli (>=1.19.3,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[project.urls]
homepage = "https://github.com/vfranca/mtcli-book"
repository = "https://github.com/vfranca/mtcli-book"
documentation = "https://vfranca.github.io/mtcli-book"
issues = "https://github.com/vfranca/mtcli-book/issues"

[project.entry-points."mtcli.plugins"]
book = "mtcli_book.book:book"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"

